[package]
name = "todo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
mongodb = { version = "2.3", features = ["bson-chrono-0_4"] }
serde = "1.0"
tokio = "1.20"
